test/errors/error24.base
Invalid type specification
fun foo() {
  val a : 1();
           ^
